--- a/templates/concursos.html
+++ b/templates/concursos.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Bot dos concursos</title>
+</head>
+<body>
+    <p>{{ mensagem_site }}</p>
+</body>
+</html>
