--- a/templates/concursos.html
+++ b/templates/concursos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Concursos Abertos</title>
-</head>
-<body>
-    <p>{{ texto_site }}</p>
-</body>
+  </head>
+  <body>
+    <p>{{ mensagem_site }}</p>
+  </body>
 </html>
