--- a/templates/concursos.html
+++ b/templates/concursos.html
@@ -4,6 +4,6 @@
     <title>Concursos Abertos</title>
   </head>
   <body>
-    <p>{{ texto_site | safe }}</p>
+    <p>{{ dados | safe }}</p>
   </body>
 </html>
