--- a/templates/concursos.html
+++ b/templates/concursos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Concursos Abertos</title>
+    <title>{{titulo}}</title>
   </head>
   <body>
     <p>{{ dados | safe }}</p>
