--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><center>Concursos hoje</center></title>
+    <title><center>{{titulo}}</center></title>
   </head>
   <body>
+    <p>{{texto}}</p>
     <ul>
       <li><a href="/concursos">Concursos Abertos</a></li>
       <li><a href="/reserva">Cadastro Reserva</a></li>
