--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -4,6 +4,7 @@
     <title><center>{{titulo}}</center></title>
   </head>
   <body>
+    <h1>{{titulo}}</h1>
     <p>{{texto}}</p>
     <ul>
       <li><a href="/concursos">Concursos Abertos</a></li>
